2003-06-30  Andrew Cagney  <cagney@redhat.com>

	* remote.c (remote_async_wait): Fix -Wformat problem.

2003-06-29  Andrew Cagney  <cagney@redhat.com>

	* remote.c (remote_wait): Call error, and not warning, when the
	packet is corrupt.
	(remote_async_wait): Ditto.

2003-06-29  Daniel Jacobowitz  <drow@mvista.com>

	* sparc-tdep.c (sparc_y_regnum): Make external again.

2003-06-29  Andrew Cagney  <cagney@redhat.com>

	* frame.c (frame_register_unwind): Use unsigned char when dumping
	the buffer contents.

2003-06-27  Jim Blandy  <jimb@redhat.com>

	* ppc-linux-tdep.c (ppc64_linux_convert_from_func_ptr_addr): New
	function.
	(ppc_linux_init_abi): Register it as the
	CONVERT_FROM_FUNC_PTR_ADDR method under the PPC64 Linux ABI.

	* ppc-linux-tdep.c (ppc64_call_dummy_address): New function.
	(ppc_linux_init_abi): Set it as the gdbarch's call_dummy_address
	method.

	* ppc-linux-tdep.c (ppc64_desc_entry_point): New function.
	(ppc64_standard_linkage_target): Use it.

2003-06-27  Elena Zannoni  <ezannoni@redhat.com>

	* config/powerpc/ppc64-linux.mh (NATDEPFILES): Add linux-nat.o.

2003-06-27  Elena Zannoni  <ezannoni@redhat.com>

        * symfile.c (syms_from_objfile): Move variables to inner block.
        Move the checks for the non-mainline case a bit earlier to avoid
        doing some useless computations.

2003-06-27  Elena Zannoni  <ezannoni@redhat.com>

        * dwarfread.c (decode_modified_type): Gag new compiler warning.

2003-06-26  Michael Chastain  <mec@shout.net>

	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.c++/pr-1210.cc,
	gdb/testsuite/gdb.c++/pr-1210.exp.

2003-06-26  Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2read.c (dwarf2_locate_sections): Ignore empty .eh_frame
	sections.

2003-06-26  Andrew Cagney  <cagney@redhat.com>

	* config/djgpp/fnchange.lst: Fix 8.3 problem with sim/ppc's
	altivec_expression.h and altivec_registers.h.

2003-06-26  Andrew Cagney  <cagney@redhat.com>

	* mips-tdep.c (gdb_print_insn_mips): Only explicitly set